--- a/pcsx_ww.html
+++ b/pcsx_ww.html
@@ -71,8 +71,15 @@
           XBox Cotrollers also work, but currently only maps to chrome/windows.
   </div>
 
-  <script type='text/javascript' src="pcsx_ui.js"></script>
+<script type='text/javascript' src="pcsx_ui.js"></script>
   <script type="text/javascript" src="pcsx_ww.js"></script>
+  <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('./service-worker.js')
+      .then(() => console.log('✅ Service Worker registered'))
+      .catch(err => console.error('❌ Service Worker registration failed:', err));
+  }
+</script>
   
 </body>
 
